# CreationWorkshop

./: .env.example  .gitignore  README.md  design_doc.md  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  ErrorBoundary.tsx  index.css
scripts/: debug_chroma.py  measure_timings.py
src/: main.py
src/core/: llm.py  logging_utils.py  schemas.py  state_manager.py
src/modules/: cda_agent.py  cdng_chain.py  dual_rag.py  main_graph.py  see_agent.py  see_agent_v2.py  wm_kg.py
